tests/NormalTests/paczka1/small_fuzzy/82771280.err
Error in line 5: W7dCi2Ov3s A967 77,1
Error in line 9: dGVl A43 989,6
Error in line 12: B3hM5pJXpb S563 27,4
